--- a/ProductCatalog-Web/Views/Shared/Components/Category/Default.cshtml
+++ b/ProductCatalog-Web/Views/Shared/Components/Category/Default.cshtml
@@ -1,11 +1,10 @@
 ﻿@model IEnumerable<ProductCatolog_Core.Models.Category>
 
 <div class="category-list card shadow-sm p-3">
-    <h3 class="text-center text-primary">Categories</h3>
     <ul class="list-group list-group-flush">
         <li class="list-group-item all-categories">
             <a asp-route-CatId="" class="text-decoration-none text-white fw-bold">
-                Tüm Kategoriler
+                All Categories
             </a>
         </li>
         @foreach (var category in Model)
