--- a/ProductCatalog-Web/Views/Account/Register.cshtml
+++ b/ProductCatalog-Web/Views/Account/Register.cshtml
@@ -17,14 +17,14 @@
                     <div class="row mb-3">
                         <div class="col-md-6">
                             <div class="form-group">
-                                <label asp-for="FirstName" class="control-label"></label>
+                                <label asp-for="FirstName" class="control-label">Firstname</label>
                                 <input asp-for="FirstName" class="form-control" />
                                 <span asp-validation-for="FirstName" class="text-danger"></span>
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="form-group">
-                                <label asp-for="LastName" class="control-label"></label>
+                                <label asp-for="LastName" class="control-label">Lastname</label>
                                 <input asp-for="LastName" class="form-control" />
                                 <span asp-validation-for="LastName" class="text-danger"></span>
                             </div>
@@ -32,7 +32,7 @@
                     </div>
 
                     <div class="form-group mb-3">
-                        <label asp-for="Email" class="control-label"></label>
+                        <label asp-for="Email" class="control-label">E-Mail</label>
                         <input asp-for="Email" class="form-control" />
                         <span asp-validation-for="Email" class="text-danger"></span>
                     </div>
@@ -40,14 +40,14 @@
                     <div class="row mb-3">
                         <div class="col-md-6">
                             <div class="form-group">
-                                <label asp-for="Password" class="control-label"></label>
+                                <label asp-for="Password" class="control-label">Password</label>
                                 <input asp-for="Password" type="password" class="form-control" />
                                 <span asp-validation-for="Password" class="text-danger"></span>
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="form-group">
-                                <label asp-for="ConfirmPassword" class="control-label"></label>
+                                <label asp-for="ConfirmPassword" class="control-label">Confirm Password</label>
                                 <input asp-for="ConfirmPassword" type="password" class="form-control" />
                                 <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
                             </div>
